Cmopleted Dashboard and Logs
